# pseudobank

./: README.md
services/api-gateway/: Cargo.toml  README.md
services/api-gateway/config/: base.json
services/api-gateway/src/: configuration.rs  gateway.rs  lib.rs  main.rs  registry.rs  router.rs  service.rs
