[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.11", features = ["serde_json"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
